# baremetal-llvm-libc

./: CMakeLists.txt  README.md  patch.patch
include/aarch64/: ctype.h  fenv.h  string.h  strings.h
include/x86_64/: stdio.h  stdlib.h
